# robotsix-chat

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitmodules  .markdownlint-cli2.jsonc  .markdownlintignore  .pre-commit-config.yaml  .secrets.baseline  404.html  AGENT.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  coverage.xml  docker-compose.yml  index.html  memory-ledger.json  mkdocs.yml  modules.yaml  objects.inv  package-lock.json  package.json  pyproject.toml  transform_tests.py  typos.toml  vulture_whitelist.py
.data/: board_write_queue.json  diagnostics_effectiveness.json
.github/: PULL_REQUEST_TEMPLATE.md  codeql-config.yml  dependabot.yml
.github/scripts/: verify-ci.js
.github/workflows/: auto-release.yml  baseline-check.yml  ci.yml  codeql.yml  dependabot-auto-merge.yml  dependency-review.yml  deps-bump.yml  docs.yml  lint-workflows.yml  redeploy-mill.yml  release-image.yml  release.yml  scan-container.yml  scorecard.yml
.local-deps/asgi_correlation_id/: __init__.py  log_filters.py
.local_pkgs/httpx-0.28.1.dist-info/: RECORD
.local_pkgs/respx-0.23.1.dist-info/: RECORD
.robotsix-mill/: config.yaml
.robotsix-mill/periodic/: env_doc_sync.yaml  health.yaml  module_curator.yaml  module_size.yaml  triage_boilerplate.yaml
MagicMock/mock.autonomous.persist_path/: 139888431170624  139888431171296  139888431176672  139888431177008  139888431177680  139888431178688  139888431182720  139888431479648  140224929628240  140224929628912  140224929629584  140224934338848  140224934339520  140224934339856  140224934340864  140224934341536  140224934342880  140224934343216  140224934343888  140224934344560  140224934344896
_snippets/nginx-reverse-proxy/: index.html
_stubs/asgi_correlation_id/: __init__.py
api/robotsix_chat/: index.html
architecture/: index.html
changelog/: index.html
changelog.d/: 20260622T111357Z-add-agent-invokable-delegate-task-tool-5d9a.feature.md  20260622T111357Z-add-agent-invokable-tool-to-delegate-tas-5d9a.misc.md  20260622T111357Z-add-sub-agent-runner-that-executes-deleg-ebc6.misc.md  20260622T111357Z-render-background-task-notifications-in-41ed.feature.md  20260622T111357Z-render-background-task-notifications-in-41ed.misc.md  20260622T111358Z-add-config-settings-and-end-to-end-lifec-9c9a.misc.md  20260622T135439Z-implement-persistent-server-to-browser-s-ecda.doc.md  20260622T143542Z-adopt-towncrier-for-changelog-automation-c2a9.misc.md  20260622T143958Z-queue-user-messages-while-the-chat-agent-6230.misc.md  20260622T144001Z-give-the-chat-agent-access-to-the-user-s-6708.misc.md  20260622T150026Z-robotsix-chat-enable-the-data-dir-audit-b3b5.misc.md  20260622T165124Z-extract-common-failingclient-helper-in-t-e157.misc.md  20260622T165124Z-extract-shared-ci-verify-script-from-dup-1c8e.misc.md  20260622T165125Z-add-editorconfig-for-consistent-editor-d-2ce5.misc.md  20260622T170000Z-add-persistent-sse-events-channel-aa11.feature.md  20260622T173541Z-implement-persistent-server-to-browser-s-b004.misc.md  20260622T183327Z-ci-failure-release-image-on-main-3a35.misc.md  20260623T025119Z-remove-accidentally-committed-src-bin-id-7051.misc.md  20260623T032957Z-add-server-max-background-tasks-to-examp-641b.misc.md  20260623T043413Z-migrate-robotsix-chat-to-consume-reply-t-e574.misc.md  20260623T044834Z-agent-md-testing-conventions-when-testin-a1c3.misc.md  20260623T091745Z-create-docs-configuration-md-documenting-08a3.misc.md  20260623T091745Z-factor-out-shared-basebrokeredclient-fro-8565.misc.md  20260623T092901Z-add-a-side-panel-showing-spawned-sub-age-6457.misc.md  20260623T093207Z-delete-stale-docs-user-guide-configurati-34e6.misc.md  20260623T093449Z-retry-transient-upstream-llm-errors-in-a-6dcc.misc.md  20260623T104318Z-rehydrate-conversation-in-the-ui-on-page-3d55.misc.md  20260623T104319Z-delegated-background-tasks-never-reach-t-a0f6.misc.md  20260623T105122Z-tasks-side-panel-cannot-be-closed-add-a-8190.misc.md  20260623T124317Z-robotsix-chat-add-persistent-cross-conve-6fbd.misc.md  20260623T124825Z-robotsix-chat-add-calendar-personal-task-eaf7.misc.md  20260623T125227Z-add-checkloopregistry-loop-worker-persis-4c34.misc.md  20260623T125227Z-add-loop-stop-http-endpoint-and-wire-che-2943.misc.md  20260623T125227Z-add-loops-ui-section-to-chat-tasks-panel-a395.misc.md  20260623T125227Z-add-start-check-loop-stop-check-loop-age-75ab.misc.md  20260623T130339Z-make-the-background-task-pane-larger-res-4557.misc.md  20260623T131325Z-enable-the-assistant-to-run-periodic-rec-3feb.misc.md  20260623T132732Z-add-max-check-loops-and-min-check-loop-i-2b3d.misc.md  20260623T140358Z-wire-min-check-loop-interval-seconds-fro-cbb7.misc.md  20260623T141949Z-add-test-coverage-for-broker-client-py-b-f3b0.misc.md  (+671 more)
config/: chat.local.example.yaml  config.example.json  config.json  config.schema.json
config/skills/: example.skill.yaml
configuration/: index.html
contributing/: index.html
deploy/: .env.example  README.md  config.example.yaml  docker-compose.yml
docs/: architecture.md  changelog.md  configuration.md  contributing.md  deployment.md  getting-started.md  index.md  modules.yaml  periodic-checks.md  system_prompt_changelog.md  triage-boilerplate.md
docs/_snippets/: nginx-reverse-proxy.md
docs/api/: robotsix_chat.md
docs/github/: skill.md
docs/lifecycle/: skill.md
docs/memory/: api.md
docs/notification/: skill.md
docs/user-guide/: configuration.md  deployment.md  settings-ui.md
getting-started/: index.html
local-deps/asgi_correlation_id-5.0.1.dist-info/: METADATA  RECORD
periodic-checks/: index.html
scripts/: check_activity_kinds.py  check_autonomous_states.py  check_kind_literals.py  check_modules_registry.py  check_sse_event_types.py  check_subsession_kinds.py  check_subsession_statuses.py  regenerate_schema.py
search/: search_index.json
system_prompt_changelog/: index.html
tasks/: ARCHIVE.md  README.md  TASKS.md
tests/: __init__.py  conftest.py  test_broker_client.py  test_config.py  test_smoke.py  test_version_check.py
triage-boilerplate/: index.html
(+275 files in other folders)
