[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robotsix-chat"
version = "0.1.0"
description = "Browser + SSE chat server exposing an LLM agent to human users"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "Damien Robotsix", email = "damien.robotsix@gmail.com" }]
dependencies = [
    "asgi-correlation-id",
    "httpx",
    "pydantic",
    "pyjwt",
    "pyyaml",
    "structlog>=24.0.0",
    "uvicorn",
    "starlette",
    # Shared robotsix-stack libraries, consumed via git (see [tool.uv.sources]):
    #   - robotsix-config: the JSON config library.
    #   - robotsix-llmio: provider-agnostic LLM I/O; the chat picks a
    #     `model_level` and llmio resolves the backend. The base package is
    #     enough to import the config factory; the actual backend deps come
    #     from the per-transport extras below.
    "robotsix-config",
    "robotsix-llmio",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/damien-robotsix/robotsix-chat"
Repository = "https://github.com/damien-robotsix/robotsix-chat"
Documentation = "https://damien-robotsix.github.io/robotsix-chat"
Issues = "https://github.com/damien-robotsix/robotsix-chat/issues"
Changelog = "https://github.com/damien-robotsix/robotsix-chat/blob/main/CHANGELOG.md"

[project.optional-dependencies]
# Per-transport backends, obtained THROUGH robotsix-llmio's own extras so the
# stack owns those deps in one place. The transport is selected by
# `llmio.model_level` (the level encodes the transport + model).
#
# claude-sdk: Claude Agent SDK — subscription auth via a logged-in `claude` CLI
# (no API key), needs Node.js + the `claude` CLI at runtime. (model_level 3)
claude-sdk = ["robotsix-llmio[claude-sdk]"]
# openrouter: OpenRouter (deepseek) — needs `llmio.api_key`. (model_level 1-2)
openrouter = ["robotsix-llmio[openrouter]"]
# tracing: Langfuse observability — exports LLM call traces and enables
# OTel trace-id injection in log records.  Credentials are read from the
# LANGFUSE_* env vars at startup; absent credentials = graceful no-op.
tracing = ["robotsix-llmio[tracing]"]
# memory: cognee-backed long-term agent memory (model_level-agnostic). Heavy —
# pulls a large transitive tree (litellm, lancedb, …). `transformers` supplies
# the HuggingFace tokenizer for the bge-m3 embedding path (no torch required).
# Disabled at runtime unless `memory.enabled` is set; absent extra = graceful
# no-op (NullMemory).
memory = ["cognee", "transformers"]

[project.scripts]
robotsix-chat = "robotsix_chat.chat.server:run_server_from_config"

[dependency-groups]
dev = [
    "deptry",
    "hypothesis",
    "mypy",

    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-xdist[psutil]",
    "respx",
    "ruff",
    "towncrier",
]
docs = [
    "mkdocs-material",
    "mkdocstrings[python]",
]

[tool.hatch.build.targets.wheel]
packages = ["src/robotsix_chat"]

# First-party git sources are pinned to commit SHAs (repo baseline); the
# fleet pin-bump workflow advances them through reviewed PRs.
# robotsix-llmio deliberately has no entry here: its SHA pin is inherited from
# robotsix-board-agent's direct-URL requirement, so the two repos can't
# disagree on the version.
[tool.uv.sources]
robotsix-config = { git = "https://github.com/damien-robotsix/robotsix-config.git", rev = "424f8ec" }  # pragma: allowlist secret
robotsix-llmio = { git = "https://github.com/damien-robotsix/robotsix-llmio.git", rev = "73f2d555caa21de47a3732824d776e04719b3011" }  # pragma: allowlist secret

[tool.towncrier]
package = "robotsix_chat"
package_dir = "src"
filename = "CHANGELOG.md"
directory = "changelog.d"
title_format = "## [{version}] - {project_date}"
issue_format = "[#{issue}](https://github.com/damien-robotsix/robotsix-chat/issues/{issue})"

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bugfixes"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Improved Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "removal"
name = "Deprecations and Removals"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Misc"
showcontent = false

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking Changes"
showcontent = true

[tool.ruff]
target-version = "py314"
line-length = 88
exclude = [".local-deps", ".local_pkgs"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "S", "D", "FURB"]

[tool.ruff.lint.per-file-ignores]
# S105: `SSE_TOKEN_TYPE = "token"` is an SSE event-type name, not a credential.
"src/robotsix_chat/chat/server/routes.py" = ["S105"]
# Test files routinely use asserts (S101), bind-all-interfaces test servers
# (S104), and hard-coded sentinel credentials/tokens (S105-S107).
"tests/**" = ["S101", "S104", "S105", "S106", "S107"]
# The vulture whitelist is a tooling artefact, not a documented module.
"vulture_whitelist.py" = ["D100"]

[tool.mypy]
python_version = "3.14"
strict = true
exclude = ["vulture_whitelist.py", ".local-deps", "_stubs"]

# cognee (the optional `memory` extra) ships no type information.
[[tool.mypy.overrides]]
module = ["cognee.*"]
ignore_missing_imports = true

# PyJWT is an optional dependency for direct_repo; tolerate its absence
# in the default dev/test env.
[[tool.mypy.overrides]]
module = ["jwt"]
ignore_missing_imports = true

# asgi-correlation-id is installed at runtime but mypy can't find stubs in
# the default dev/test env.
[[tool.mypy.overrides]]
module = ["asgi_correlation_id", "asgi_correlation_id.*"]
ignore_missing_imports = true

# PyYAML ships no type stubs.
[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true

[tool.deptry]
# `robotsix_chat` is this project's own package (built from src/robotsix_chat);
# deptry otherwise misreads the intra-package absolute imports as a transitive
# third-party dependency (DEP003).
known_first_party = ["robotsix_chat"]
# vulture_whitelist.py imports `from src.robotsix_chat...` purely so vulture can
# resolve the whitelisted symbols; the `src` prefix is a tooling artefact, not a
# runtime dependency, so it is excluded from deptry's scan (DEP001 'src').
extend_exclude = ["vulture_whitelist.py", ".local-deps", ".local_pkgs", "local-deps", "-packages", "\\.deps"]

[tool.deptry.per_rule_ignores]
# `transformers` is an optional `memory`-extra dependency consumed dynamically by
# the cognee bge-m3 tokenizer path; it is never imported from src/, so deptry's
# DEP002 ("defined but not used") is expected and intentional.
# litellm is a transitive dependency of cognee (the memory extra); imported
# for its Langfuse callback so cognee traffic lands in a separate project.
DEP001 = ["litellm"]
DEP002 = ["transformers"]
# `pydantic_ai` is robotsix-llmio's agent framework: `handle.run` already returns
# its result objects, and the agent builds a multi-turn `message_history` from
# its message types. We consume it through llmio (never declare it directly), so
# this transitive import (DEP003) is deliberate.
# `pyyaml` is used directly in the skills loader for YAML skill files — no
# longer transitive; a direct dependency.
# `opentelemetry` is the OTLP exporter (``tracing`` extra); guarded by a
# try/except ImportError in cognee's Langfuse callback registration.
DEP003 = ["pydantic_ai", "pyyaml", "opentelemetry"]

[tool.bandit]
exclude_dirs = ["tests", ".local_pkgs"]

[tool.pytest.ini_options]
strict = true
testpaths = ["tests"]
filterwarnings = ["error"]


[tool.coverage.run]
source = ["robotsix_chat"]
branch = true
relative_files = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
fail_under = 88  # set at/just below current measured coverage; raise over time; never lower
