[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robotsix-chat"
version = "0.3.0"
description = "Browser + SSE chat server exposing an LLM agent to human users"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "Damien Robotsix", email = "damien.robotsix@gmail.com" }]
dependencies = [
    "asgi-correlation-id",
    "httpx",
    "pydantic",
    "pyjwt",
    "structlog>=24.0.0",
    "uvicorn",
    "starlette",
    # Shared robotsix-stack libraries, consumed via git (see [tool.uv.sources]):
    #   - robotsix-config: the JSON config library.
    #   - robotsix-llmio: provider-agnostic LLM I/O; the chat picks a
    #     `model_level` and llmio resolves the backend. The base package is
    #     enough to import the config factory; the actual backend deps come
    #     from the per-transport extras below.
    "robotsix-config",
    "robotsix-llmio",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/damien-robotsix/robotsix-chat"
Repository = "https://github.com/damien-robotsix/robotsix-chat"
Documentation = "https://damien-robotsix.github.io/robotsix-chat"
Issues = "https://github.com/damien-robotsix/robotsix-chat/issues"
Changelog = "https://github.com/damien-robotsix/robotsix-chat/blob/main/CHANGELOG.md"

[project.optional-dependencies]
# Per-transport backends, obtained THROUGH robotsix-llmio's own extras so the
# stack owns those deps in one place. The transport is selected by
# `llmio.model_level` (the level encodes the transport + model).
#
# claude-sdk: Claude Agent SDK — subscription auth via a logged-in `claude` CLI
# (no API key), needs Node.js + the `claude` CLI at runtime. (model_level 3)
claude-sdk = ["robotsix-llmio[claude-sdk]"]
# openrouter: OpenRouter (deepseek) — needs `llmio.api_key`. (model_level 1-2)
openrouter = ["robotsix-llmio[openrouter]"]
# tracing: Langfuse observability — exports LLM call traces and enables
# OTel trace-id injection in log records.  Credentials are read from the
# LANGFUSE_* env vars at startup; absent credentials = graceful no-op.
tracing = ["robotsix-llmio[tracing]"]
# memory: cognee-backed long-term agent memory (model_level-agnostic). Heavy —
# pulls a large transitive tree (litellm, lancedb, …). `transformers` supplies
# the HuggingFace tokenizer for the bge-m3 embedding path (no torch required).
# Disabled at runtime unless `memory.enabled` is set; absent extra = graceful
# no-op (NullMemory).
memory = ["cognee", "transformers"]
# render-url: Playwright + headless Chromium for the render_url(url) tool
# (full-page screenshots + accessibility tree extraction).  Optional —
# when absent the factory returns no tools.
render-url = ["playwright"]

[project.scripts]
robotsix-chat = "robotsix_chat.chat.server:run_server_from_config"

[dependency-groups]
dev = [
    "deptry",
    "hypothesis",
    "mypy",

    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-xdist[psutil]",
    "respx",
    "robotsix-modules",
    "ruff",
    "towncrier",
]
docs = [
    "mkdocs-material",
    "mkdocstrings[python]",
]

[tool.hatch.build.targets.wheel]
packages = ["src/robotsix_chat"]

# First-party git sources are pinned to commit SHAs (repo baseline); the
# fleet pin-bump workflow advances them through reviewed PRs.
[tool.uv.sources]
robotsix-config = { git = "https://github.com/damien-robotsix/robotsix-config.git", rev = "424f8ec5140e14e9699b92d5c3755d929625b570" }  # pragma: allowlist secret
robotsix-llmio = { git = "https://github.com/damien-robotsix/robotsix-llmio.git", rev = "aada2ed0032d28b97349bc31e61128fe2b2b3691" }  # pragma: allowlist secret
# robotsix-modules: same SHA as robotsix-mill (coherent-set rule).
robotsix-modules = { git = "https://github.com/damien-robotsix/robotsix-modules.git", rev = "d7c5e59980516de6e050db02ff54aef4e15ff5c3" }  # pragma: allowlist secret

[tool.towncrier]
package = "robotsix_chat"
package_dir = "src"
filename = "CHANGELOG.md"
directory = "changelog.d"
title_format = "## [{version}] - {project_date}"
issue_format = "[#{issue}](https://github.com/damien-robotsix/robotsix-chat/issues/{issue})"

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bugfixes"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Improved Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "removal"
name = "Deprecations and Removals"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Misc"
showcontent = false

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking Changes"
showcontent = true

[tool.ruff]
target-version = "py314"
line-length = 88
exclude = [".local-deps", ".local_pkgs"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "S", "D", "FURB", "ARG", "N", "RUF", "T"]

[tool.ruff.lint.per-file-ignores]
# S105: SSE event-type names like "token" / "done" / "error" are not
# credentials.
"src/robotsix_chat/chat/server/routes/**" = ["S105"]
# Test files routinely use asserts (S101), bind-all-interfaces test servers
# (S104), and hard-coded sentinel credentials/tokens (S105-S107).
# ARG001 / ARG002 / ARG005: pytest fixture arguments are often required for
# setup even when not referenced in the body.
# N811: test files import module-level constants via aliases (e.g.
# `_INSTALLATION_TOKEN_CACHE as _cache`) to manipulate internal state.
# RUF002 / RUF003: ambiguous unicode characters in test docstrings and
# comments (multiplication sign, en dash) are intentional.
# RUF015: single-element list-comprehension slices in test assertions are
# deliberate for readability.
# RUF043: unescaped metacharacters in ``match=`` patterns are intentional
# (testing error messages that contain literal dots).
# RUF059: unpacking with unused variables is common in test assertions.
"tests/**" = ["S101", "S104", "S105", "S106", "S107", "ARG001", "ARG002", "ARG005", "N811", "RUF002", "RUF003", "RUF015", "RUF043", "RUF059"]
# The vulture whitelist is a tooling artefact, not a documented module.
"vulture_whitelist.py" = ["D100"]
# RUF001: en dashes used as bullet markers in prose / prompt strings are
# intentional and not ambiguous in context.
"src/robotsix_chat/chat/server/app.py" = ["RUF001"]
"src/robotsix_chat/config/settings.py" = ["RUF001"]
# ARG002: NullMemory parameters are required by the ChatMemory protocol;
# the no-op implementation intentionally ignores them.
"src/robotsix_chat/memory/base.py" = ["ARG002"]
# ARG002: `ticket_id` is required by the RepoClient.commit_changes protocol
# even though the direct-GitDB implementation doesn't use it.
"src/robotsix_chat/repo/direct/client.py" = ["ARG002"]
# Standalone scripts are expected to use print() for output; T (print /
# pdb / breakpoint) guards are for production library code.
# N806: PascalCase regex pattern variable names in scripts are intentional.
"scripts/**" = ["T", "N806"]
# ARG001/ARG002: stub middleware signatures follow the target protocol;
# unused *args/**kwargs are part of the interface contract.
"_stubs/**" = ["ARG001", "ARG002"]

[tool.mypy]
python_version = "3.14"
strict = true
exclude = ["vulture_whitelist.py", ".local-deps", "_stubs"]

# cognee (the optional `memory` extra) ships no type information.
[[tool.mypy.overrides]]
module = ["cognee.*"]
ignore_missing_imports = true

# playwright (the optional `render-url` extra) ships no type information.
[[tool.mypy.overrides]]
module = ["playwright.*"]
ignore_missing_imports = true

# PyJWT is an optional dependency for direct_repo; tolerate its absence
# in the default dev/test env.
[[tool.mypy.overrides]]
module = ["jwt"]
ignore_missing_imports = true

# asgi-correlation-id is installed at runtime but mypy can't find stubs in
# the default dev/test env.
[[tool.mypy.overrides]]
module = ["asgi_correlation_id", "asgi_correlation_id.*"]
ignore_missing_imports = true

[tool.deptry]
# `robotsix_chat` is this project's own package (built from src/robotsix_chat);
# deptry otherwise misreads the intra-package absolute imports as a transitive
# third-party dependency (DEP003).
known_first_party = ["robotsix_chat"]
# vulture_whitelist.py imports `from src.robotsix_chat...` purely so vulture can
# resolve the whitelisted symbols; the `src` prefix is a tooling artefact, not a
# runtime dependency, so it is excluded from deptry's scan (DEP001 'src').
extend_exclude = ["vulture_whitelist.py", ".local-deps", ".local_pkgs", "local-deps", "-packages", "\\.deps"]

[tool.deptry.per_rule_ignores]
# `transformers` is an optional `memory`-extra dependency consumed dynamically by
# the cognee bge-m3 tokenizer path; it is never imported from src/, so deptry's
# DEP002 ("defined but not used") is expected and intentional.
# litellm is a transitive dependency of cognee (the memory extra); imported
# for its Langfuse callback so cognee traffic lands in a separate project.
DEP001 = ["litellm"]
DEP002 = ["transformers"]
# `pydantic_ai` is robotsix-llmio's agent framework: `handle.run` already returns
# its result objects, and the agent builds a multi-turn `message_history` from
# its message types. We consume it through llmio (never declare it directly), so
# this transitive import (DEP003) is deliberate.
# `opentelemetry` is the OTLP exporter (``tracing`` extra); guarded by a
# try/except ImportError in cognee's Langfuse callback registration.
DEP003 = ["pydantic_ai", "opentelemetry"]

[tool.bandit]
exclude_dirs = ["tests", ".local_pkgs"]

[tool.pytest.ini_options]
# Default run is offline and credential-free (robotsix-standards python page):
# network/credential tests carry the `live` marker and run only via
# `pytest -m live`.
addopts = ["-m", "not live", "--strict-markers", "--strict-config"]
markers = [
    "live: needs network access or real credentials; excluded from the default run",
]
testpaths = ["tests"]
filterwarnings = ["error"]


[tool.coverage.run]
source = ["robotsix_chat"]
branch = true
relative_files = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
# One fleet-wide floor (robotsix-standards python page): 80, enforced by the
# shared python-ci.yml workflow; this local value keeps `uv run pytest` honest.
# No per-repo threshold, no ratchet — the floor moves only fleet-wide.
fail_under = 80
